# GameOfLife

./: CMakeLists.txt  README.md
include/: opencl_conway.h  utils.h
include/glad/: glad.h
src/: conway.cpp  sequential-conway.cpp  utils.cpp
src/opencl/: CalcStep.cl  CalcStep2D.cl  CalcStep3D.cl  CalcStepGroups.cl  opencl_conway.cpp
src/shaders/: 3d_fragment.glsl  3d_vertex.glsl  grid_fragment.glsl
